2009-01-06  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/acmmp3dec/Makefile.am:
	Fix typo in the makefile target preventing disting.

2009-01-05  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/inspect/plugin-app.xml:
	* examples/Makefile.am:
	* examples/app/.cvsignore:
	* examples/app/Makefile.am:
	* examples/app/appsink-src.c:
	* examples/app/appsrc-ra.c:
	* examples/app/appsrc-seekable.c:
	* examples/app/appsrc-stream.c:
	* examples/app/appsrc-stream2.c:
	* examples/app/appsrc_ex.c:
	* gst-libs/gst/Makefile.am:
	* gst-libs/gst/app/.cvsignore:
	* gst-libs/gst/app/Makefile.am:
	* gst-libs/gst/app/gstapp-marshal.list:
	* gst-libs/gst/app/gstappbuffer.c:
	* gst-libs/gst/app/gstappbuffer.h:
	* gst-libs/gst/app/gstappsink.c:
	* gst-libs/gst/app/gstappsink.h:
	* gst-libs/gst/app/gstappsrc.c:
	* gst-libs/gst/app/gstappsrc.h:
	* gst/app/Makefile.am:
	* gst/app/gstapp.c:

	Remove AppSrc/AppSink that are moving to -base. Partially fixes
	#564421

2009-01-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegdemux/mpegtspacketizer.c:
	Guard interval is 4 if descriptor part shows binary 11 (3 not 4).

2009-01-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegdemux/gstmpegdesc.h:
	Fix up satellite delivery subsystem defs.

2009-01-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegdemux/gstmpegdesc.h:
	Fix up terrestrial delivery system descriptor defs.
	They should be shifted otherwise wrong values are seen.

2009-01-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/Makefile.am:
	* gst/mxf/mxfdemux.c:
	* gst/mxf/mxfmetadata.c: (mxf_metadata_handle_tag),
	(mxf_metadata_preface_handle_tag),
	(mxf_metadata_identification_handle_tag),
	(mxf_metadata_content_storage_handle_tag),
	(mxf_metadata_essence_container_data_handle_tag),